[package]
name = "learning-rust"
version = "0.1.0"
authors = ["Daniel Corcoran <danielc.92@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }